RESOLVED FIXED283506
[Media] WebCore::EffectiveRateChangedListener leaks WebEffectiveRateChangedListenerObjCAdapter
https://bugs.webkit.org/show_bug.cgi?id=283506
Summary [Media] WebCore::EffectiveRateChangedListener leaks WebEffectiveRateChangedLi...
David Kilzer (:ddkilzer)
Reported 2024-11-21 11:30:55 PST
[Media] WebCore::EffectiveRateChangedListener leaks WebEffectiveRateChangedListenerObjCAdapter. I forgot to use adoptNS(). Found by source code inspection. Regressed with: WebCore::EffectiveRateChangedListener should use a weak observer with CFNotificationCenter <https://bugs.webkit.org/show_bug.cgi?id=282468> <rdar://139098378> <https://commits.webkit.org/286110@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-21 11:31:19 PST
David Kilzer (:ddkilzer)
Comment 2 2024-11-21 11:35:24 PST
EWS
Comment 3 2024-11-21 15:46:31 PST
Committed 286931@main (20a70a58eede): <https://commits.webkit.org/286931@main> Reviewed commits have been landed. Closing PR #36965 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.