[Media] WebCore::EffectiveRateChangedListener leaks WebEffectiveRateChangedListenerObjCAdapter <https://bugs.webkit.org/show_bug.cgi?id=283506> <rdar://140360924>

Reviewed by Geoffrey Garen.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(@property WebEffectiveRateChangedListenerObjCAdapter.protectedListener):
- Change "nonatomic" to "atomic" to document ThreadSafeWeakPtr behavior.
(WebCore::timebaseEffectiveRateChangedCallback):
- Switch to use "auto".
(WebCore::EffectiveRateChangedListener::EffectiveRateChangedListener):
- Use adoptNS() to fix the leak.

Canonical link: https://commits.webkit.org/286931@main